# group_filmwork_watching_service

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  entrypoint.sh  env.template  pyproject.toml
.github/workflows/: python.yml
alembic/: env.py
alembic/versions/: bb8387d7e543_init.py  bba94f7efd50_init.py  be2dd49ec774_add_total_price_for_reservation.py  e656a8ee9fa0_rename_place_address.py
booking-service/src/core/: config.py
booking-service/src/db/: postgres.py
booking-service/src/models/: entity.py
infra/: docker-compose-dev.yml  docker-compose.yml
infra/nginx/: default.conf
requirements/: endpoints.md  entities  requirements.md
src/: cache.py  config.py  http_client.py  loggers.py  main.py  ping.py  postgres.py
src/auth/: models.py
src/billing/: __init__.py  router.py
src/filmwork/: dependencies.py  exceptions.py  schemas.py  service.py
src/notification/: constants.py  dependencies.py  schemas.py  service.py
src/place/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/reservation/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  unpaid_reservations_checker.py
src/token/: dependencies.py  schemas.py  service.py
src/watch/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
templates/: group_filmwork_watching.cancelled_reservation  group_filmwork_watching.created_reservation
tests/: config.py  conftest.py  docker-compose.yml  models.py  test_places.py  test_reservations.py  test_watches.py  utils.py
tests/src/: test_places.py  test_reservations.py  test_watches.py
